--- a/lazywhiz/package.json
+++ b/lazywhiz/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.1",
     "framer-motion": "^11.0.8",
+    "googleapis": "^150.0.1",
     "microcms-js-sdk": "^3.2.0",
     "next": "14.1.0",
+    "nodemailer": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0"
