--- a/lazywhiz/package.json
+++ b/lazywhiz/package.json
@@ -12,6 +12,7 @@
     "@google-cloud/local-auth": "^3.0.1",
     "framer-motion": "^11.0.8",
     "googleapis": "^150.0.1",
+    "lottie-react": "^2.4.1",
     "microcms-js-sdk": "^3.2.0",
     "next": "14.1.0",
     "nodemailer": "^7.0.3",
